--- a/drop.html
+++ b/drop.html
@@ -23,7 +23,7 @@
         for(var x = 0,len = imagesOnCanvas.length; x < len; x++) {
             var obj = imagesOnCanvas[x];
             obj.context.drawImage(obj.image,obj.x,obj.y);
-            console.log(len);
+            // console.log(len);
             
         }
     }
